--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,10 @@
 version: '3.8'
 
 services:
-  fastapi_app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: fastapi_app
-    ports:
-      - "7000:7000"
+  app:
+    build: .
+    command: uvicorn app.main:app --host 0.0.0.0
     volumes:
-      - ./app:/app/app
-    environment:
-      - MODEL_PATH=/app/app/model.h5
-    restart: unless-stopped
+      - .:/app
+    ports:
+      - "8008:8000"
