--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   app:
     build: .
-    command: uvicorn app.main:app --port 8000 --workers 4
+    command: sh -c "uvicorn app.main:app --reload --host=0.0.0.0 --port=8000 --workers 4"
     volumes:
       - .:/app
     ports:
